@@ -5,6 +5,8 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.List;
+import org.springframework.security.config.Customizer;
+import java.util.Arrays;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -18,6 +20,7 @@ import org.springframework.security.config.annotation.method.configuration.Enabl
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.http.HttpStatus;
 import jakarta.servlet.http.HttpServletResponse;
+import org.springframework.beans.factory.annotation.Value;
 
 @EnableMethodSecurity
 @Configuration
@@ -34,6 +37,7 @@ SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 
     http
     .cors(cors -> {})
+    .cors(Customizer.withDefaults())
     .csrf(csrf -> csrf.disable())
         .exceptionHandling(exception -> exception
             .authenticationEntryPoint((request, response, authException) -> {
@@ -68,14 +72,13 @@ SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
     }
 
    @Bean
-CorsConfigurationSource corsConfigurationSource() {
+CorsConfigurationSource corsConfigurationSource(@Value("${CORS_ALLOWED_ORIGINS:http://localhost:*}") String allowedOrigins) 
+{
 
     CorsConfiguration configuration = new CorsConfiguration();
 
     configuration.setAllowedOriginPatterns(
-            List.of(
-                     "http://localhost:*"
-            )
+              Arrays.asList(allowedOrigins.split(","))
     );
 
     configuration.setAllowedMethods(
